--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div>
-            <img src="./IMAGENS/minhafoto.jpeg" alt="minha foto">
+            <img src="./minhafoto.jpeg" alt="minha foto">
         </div>
     </div><!-- FINAL APRESENTAÇÃO MEIO-->
 
